[gd_scene load_steps=5 format=2]

[ext_resource path="res://Objects/Tilemap/TileMap.gd" type="Script" id=1]
[ext_resource path="res://Graphics/Безымянный.png" type="Texture" id=2]
[ext_resource path="res://Objects/City/City.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/Mines/Metal.tscn" type="PackedScene" id=4]

[node name="TileMap" type="Node2D"]
position = Vector2( 0, -1 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 1002.23, 1086.12 )
scale = Vector2( 3.623, 3.613 )
texture = ExtResource( 2 )

[node name="Bascaky_Ts" type="Area2D" parent="."]
monitoring = false
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Bascaky_Ts"]
position = Vector2( 1051.26, 1075.04 )
polygon = PoolVector2Array( 1132.5, -1068.15, 1125.66, -603.082, 737.656, -443.21, 171.153, -287.823, 376.983, -1070.82 )

[node name="Bascaky_C" type="Area2D" parent="."]
monitoring = false
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Bascaky_C"]
position = Vector2( 1201.89, 929.184 )
polygon = PoolVector2Array( 1000.56, -444.189, 994.441, 587.417, 690.385, 571.861, 341.415, 545.094, -366.032, 707.625, -341.167, 262.537, -563.403, 21.252, 596.723, -249.281 )

[node name="Gorny" type="Area2D" parent="."]
monitoring = false
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Gorny"]
position = Vector2( 1166.32, 1177.19 )
polygon = PoolVector2Array( 1036.13, 365.61, 1014.49, 1074.64, -66.6249, 1093.79, -339.317, 485.475, 403.844, 329.651 )

[node name="Nasardy" type="Area2D" parent="."]
monitoring = false
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Nasardy"]
position = Vector2( 1029.37, 1107.42 )
polygon = PoolVector2Array( -606.847, -365.341, -830.129, -171.259, -818.138, 727.721, 49.0321, 1167.97, -212.45, 554.927, -193.622, 296.677, -186.495, 88.2069 )

[node name="Adamanty" type="Area2D" parent="."]
monitoring = false
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Adamanty"]
position = Vector2( 1003.87, 1177.67 )
polygon = PoolVector2Array( -801.01, -1181.46, 373.649, -1178.79, 176.734, -366.044, -377.316, -290.394, -456.621, -319.15 )

[node name="Metal" parent="." instance=ExtResource( 4 )]
position = Vector2( 857.592, 139.451 )

[node name="City" parent="." instance=ExtResource( 3 )]
position = Vector2( 469.805, 97.4483 )

[node name="City2" parent="." instance=ExtResource( 3 )]
position = Vector2( 1151.04, 85.7743 )

[node name="City3" parent="." instance=ExtResource( 3 )]
position = Vector2( 590.918, 385.062 )

[node name="City4" parent="." instance=ExtResource( 3 )]
position = Vector2( 1138.28, 373.388 )

[node name="City5" parent="." instance=ExtResource( 3 )]
position = Vector2( 691.283, 735.542 )

[node name="City6" parent="." instance=ExtResource( 3 )]
position = Vector2( 1069.42, 724.185 )

[node name="City7" parent="." instance=ExtResource( 3 )]
position = Vector2( 857.592, 465.028 )

[node name="City8" parent="." instance=ExtResource( 3 )]
position = Vector2( 1555.59, 109.122 )

[node name="City9" parent="." instance=ExtResource( 3 )]
position = Vector2( 2024.18, 86.4095 )

[node name="City10" parent="." instance=ExtResource( 3 )]
position = Vector2( 1546.64, 322.032 )

[node name="City11" parent="." instance=ExtResource( 3 )]
position = Vector2( 2033.13, 333.706 )

[node name="City12" parent="." instance=ExtResource( 3 )]
position = Vector2( 1729.92, 518.951 )

[node name="City13" parent="." instance=ExtResource( 3 )]
position = Vector2( 1417.46, 617.225 )

[node name="City14" parent="." instance=ExtResource( 3 )]
position = Vector2( 2024.18, 866.408 )

[node name="City15" parent="." instance=ExtResource( 3 )]
position = Vector2( 2033.13, 1277.6 )

[node name="City16" parent="." instance=ExtResource( 3 )]
position = Vector2( 1729.92, 1022.12 )

[node name="City17" parent="." instance=ExtResource( 3 )]
position = Vector2( 1417.46, 1154.6 )

[node name="City18" parent="." instance=ExtResource( 3 )]
position = Vector2( 1138.28, 1022.12 )

[node name="City19" parent="." instance=ExtResource( 3 )]
position = Vector2( 1138.28, 1377.01 )

[node name="City20" parent="." instance=ExtResource( 3 )]
position = Vector2( 2024.18, 1705.48 )

[node name="City21" parent="." instance=ExtResource( 3 )]
position = Vector2( 1729.92, 1705.48 )

[node name="City22" parent="." instance=ExtResource( 3 )]
position = Vector2( 1342.15, 1705.48 )

[node name="City23" parent="." instance=ExtResource( 3 )]
position = Vector2( 1138.28, 1982.35 )

[node name="City24" parent="." instance=ExtResource( 3 )]
position = Vector2( 1555.59, 2026.4 )

[node name="City25" parent="." instance=ExtResource( 3 )]
position = Vector2( 1906.71, 2026.4 )

[node name="City26" parent="." instance=ExtResource( 3 )]
position = Vector2( 785.387, 1982.35 )

[node name="City27" parent="." instance=ExtResource( 3 )]
position = Vector2( 528.653, 1705.48 )

[node name="City28" parent="." instance=ExtResource( 3 )]
position = Vector2( 469.805, 1377.01 )

[node name="City29" parent="." instance=ExtResource( 3 )]
position = Vector2( 528.653, 1059.87 )

[connection signal="area_entered" from="Bascaky_Ts" to="." method="_on_Bascaky_Ts_area_entered"]
[connection signal="area_entered" from="Bascaky_C" to="." method="_on_Bascaky_C_area_entered"]
[connection signal="area_entered" from="Gorny" to="." method="_on_Gorny_area_entered"]
[connection signal="area_entered" from="Nasardy" to="." method="_on_Nasardy_area_entered"]
[connection signal="area_entered" from="Adamanty" to="." method="_on_Adamanty_area_entered"]
